--- a/load_rules.yaml
+++ b/load_rules.yaml
@@ -5,7 +5,7 @@ plugins:
       # rules:
       #   - cdn.jsdelivr.net cdn.jsdelivr.net.cdn.cloudflare.net
       files:  # 从文件载入规则
-        - "/etc/mosdns/rule/redirect.txt"
+        - "/opt/etc/mosdns/rule/redirect.txt"
 
   - tag: "hosts"
     type: "hosts"
@@ -13,73 +13,73 @@ plugins:
       # entries:
       #   - "google.com 108.177.122.113"
       files:
-        - "/etc/mosdns/rule/hosts.txt"
+        - "/opt/etc/mosdns/rule/hosts.txt"
 
   - tag: "hosts_fastly"
     type: "hosts"
     args:
       files:
-        - "/etc/mosdns/rule/hosts_fastly.txt"
+        - "/opt/etc/mosdns/rule/hosts_fastly.txt"
 
   - tag: "hosts_akamai"
     type: "hosts"
     args:
       files:
-        - "/etc/mosdns/rule/hosts_akamai.txt"
+        - "/opt/etc/mosdns/rule/hosts_akamai.txt"
 
   - tag: geosite_cn # 国内域名
     type: domain_set
     args:
       files:
-        - "/etc/mosdns/rule/china_domain_list.txt" # https://raw.githubusercontent.com/pmkol/easymosdns/rules/china_domain_list.txt
+        - "/opt/etc/mosdns/rule/china_domain_list.txt" # https://raw.githubusercontent.com/pmkol/easymosdns/rules/china_domain_list.txt
 
   - tag: geoip_cn # 国内 IP
     type: ip_set
     args:
       files:
-        - "/etc/mosdns/rule/china_ip_list.txt" # https://raw.githubusercontent.com/pmkol/easymosdns/rules/china_ip_list.txt
+        - "/opt/etc/mosdns/rule/china_ip_list.txt" # https://raw.githubusercontent.com/pmkol/easymosdns/rules/china_ip_list.txt
 
   - tag: privatelist # 内网域名
     type: domain_set
     args:
       files:
-        - "/etc/mosdns/rule/private.txt" # https://raw.githubusercontent.com/Loyalsoldier/domain-list-custom/release/private.txt
+        - "/opt/etc/mosdns/rule/private.txt" # https://raw.githubusercontent.com/Loyalsoldier/domain-list-custom/release/private.txt
 
   - tag: whitelist
     type: domain_set
     args:
       files:
-        - "/etc/mosdns/rule/white_list.txt" # https://raw.githubusercontent.com/Journalist-HK/Rules/main/white_list.txt
+        - "/opt/etc/mosdns/rule/white_list.txt" # https://raw.githubusercontent.com/Journalist-HK/Rules/main/white_list.txt
 
   - tag: blocklist
     type: domain_set
     args:
       files:
-        - "/etc/mosdns/rule/block_list.txt" # https://raw.githubusercontent.com/Journalist-HK/Rules/main/block_list.txt
+        - "/opt/etc/mosdns/rule/block_list.txt" # https://raw.githubusercontent.com/Journalist-HK/Rules/main/block_list.txt
 
   - tag: greylist # 用来存放被污染的域名。
     type: domain_set
     args:
       files:
-        - "/etc/mosdns/rule/grey_list.txt" # https://raw.githubusercontent.com/Journalist-HK/Rules/main/grey_list.txt
+        - "/opt/etc/mosdns/rule/grey_list.txt" # https://raw.githubusercontent.com/Journalist-HK/Rules/main/grey_list.txt
 
   - tag: ipv6list # 用来存放优先走 ipv6 的域名。
     type: domain_set
     args:
       files:
-        - "/etc/mosdns/rule/ipv6_domain_list.txt" # https://raw.githubusercontent.com/Journalist-HK/Rules/main/ipv6_domain_list.txt
+        - "/opt/etc/mosdns/rule/ipv6_domain_list.txt" # https://raw.githubusercontent.com/Journalist-HK/Rules/main/ipv6_domain_list.txt
 
   - tag: originallist # 用来存放优不进行 IP 优选的域名。
     type: domain_set
     args:
       files:
-        - "/etc/mosdns/rule/original_domain_list.txt" # https://raw.githubusercontent.com/Journalist-HK/Rules/main/original_domain_list.txt
+        - "/opt/etc/mosdns/rule/original_domain_list.txt" # https://raw.githubusercontent.com/Journalist-HK/Rules/main/original_domain_list.txt
 
   - tag: akamailist
     type: domain_set
     args:
       files:
-        - "/etc/mosdns/rule/akamai_domain_list.txt" # https://raw.githubusercontent.com/Journalist-HK/Rules/main/akamai_domain_list.txt
+        - "/opt/etc/mosdns/rule/akamai_domain_list.txt" # https://raw.githubusercontent.com/Journalist-HK/Rules/main/akamai_domain_list.txt
 
   - tag: cdnlist
     type: domain_set
@@ -96,27 +96,27 @@ plugins:
         - "ubisoft.com"
         - "xboxlive.com"
       files:
-        - "/etc/mosdns/rule/cdn_domain_list.txt" # https://raw.githubusercontent.com/pmkol/easymosdns/rules/cdn_domain_list.txt
+        - "/opt/etc/mosdns/rule/cdn_domain_list.txt" # https://raw.githubusercontent.com/pmkol/easymosdns/rules/cdn_domain_list.txt
 
   - tag: jp_dns_list
     type: domain_set
     args:
       files:
-        - "/etc/mosdns/rule/jp_dns_list.txt" # https://raw.githubusercontent.com/Journalist-HK/Rules/main/jp_dns_list.txt
+        - "/opt/etc/mosdns/rule/jp_dns_list.txt" # https://raw.githubusercontent.com/Journalist-HK/Rules/main/jp_dns_list.txt
 
   - tag: us_dns_list
     type: domain_set
     args:
       files:
-        - "/etc/mosdns/rule/us_dns_list.txt" # https://raw.githubusercontent.com/Journalist-HK/Rules/main/us_dns_list.txt
+        - "/opt/etc/mosdns/rule/us_dns_list.txt" # https://raw.githubusercontent.com/Journalist-HK/Rules/main/us_dns_list.txt
 
   - tag: gfwlist
     type: domain_set
     args:
       files:
-        - "/etc/mosdns/rule/gfw.txt" # https://raw.githubusercontent.com/Loyalsoldier/v2ray-rules-dat/release/gfw.txt
-        - "/etc/mosdns/rule/greatfire.txt" # https://raw.githubusercontent.com/Loyalsoldier/v2ray-rules-dat/release/greatfire.txt
-        - "/etc/mosdns/rule/custom_list.txt" # https://raw.githubusercontent.com/Journalist-HK/Rules/main/custom_list.txt
+        - "/opt/etc/mosdns/rule/gfw.txt" # https://raw.githubusercontent.com/Loyalsoldier/v2ray-rules-dat/release/gfw.txt
+        - "/opt/etc/mosdns/rule/greatfire.txt" # https://raw.githubusercontent.com/Loyalsoldier/v2ray-rules-dat/release/greatfire.txt
+        - "/opt/etc/mosdns/rule/custom_list.txt" # https://raw.githubusercontent.com/Journalist-HK/Rules/main/custom_list.txt
 
   - tag: banned_ip
     type: ip_set
@@ -125,58 +125,58 @@ plugins:
         - "0.0.0.0/32"
         - "2001::/32"
       files:
-        - "/etc/mosdns/rule/gfw_ip_list.txt" # https://raw.githubusercontent.com/pmkol/easymosdns/rules/gfw_ip_list.txt
-        - "/etc/mosdns/rule/facebook.txt" # https://raw.githubusercontent.com/Loyalsoldier/geoip/release/text/facebook.txt
-        # - "/etc/mosdns/rule/telegram.txt" # https://raw.githubusercontent.com/Loyalsoldier/geoip/release/text/telegram.txt
-        - "/etc/mosdns/rule/twitter.txt" # https://raw.githubusercontent.com/Loyalsoldier/geoip/release/text/twitter.txt
+        - "/opt/etc/mosdns/rule/gfw_ip_list.txt" # https://raw.githubusercontent.com/pmkol/easymosdns/rules/gfw_ip_list.txt
+        - "/opt/etc/mosdns/rule/facebook.txt" # https://raw.githubusercontent.com/Loyalsoldier/geoip/release/text/facebook.txt
+        # - "/opt/etc/mosdns/rule/telegram.txt" # https://raw.githubusercontent.com/Loyalsoldier/geoip/release/text/telegram.txt
+        - "/opt/etc/mosdns/rule/twitter.txt" # https://raw.githubusercontent.com/Loyalsoldier/geoip/release/text/twitter.txt
 
   - tag: cachefly_ipv4
     type: ip_set
     args:
       files:
-        - "/etc/mosdns/rule/cachefly_ipv4.txt" # https://raw.githubusercontent.com/Journalist-HK/Rules/main/cachefly_ipv4.txt
+        - "/opt/etc/mosdns/rule/cachefly_ipv4.txt" # https://raw.githubusercontent.com/Journalist-HK/Rules/main/cachefly_ipv4.txt
 
   - tag: cloudflare_ipv4
     type: ip_set
     args:
       files:
-        - "/etc/mosdns/rule/ip.txt" # https://raw.githubusercontent.com/XIU2/CloudflareSpeedTest/master/ip.txt
+        - "/opt/etc/mosdns/rule/ip.txt" # https://raw.githubusercontent.com/XIU2/CloudflareSpeedTest/master/ip.txt
 
   - tag: cloudflare_ipv6
     type: ip_set
     args:
       files:
-        - "/etc/mosdns/rule/ipv6.txt" # https://raw.githubusercontent.com/XIU2/CloudflareSpeedTest/master/ipv6.txt
+        - "/opt/etc/mosdns/rule/ipv6.txt" # https://raw.githubusercontent.com/XIU2/CloudflareSpeedTest/master/ipv6.txt
 
   - tag: cloudfront_ipv4
     type: ip_set
     args:
       files:
-        - "/etc/mosdns/rule/cloudfront.txt" # https://raw.githubusercontent.com/Journalist-HK/Rules/main/cloudfront.txt
+        - "/opt/etc/mosdns/rule/cloudfront.txt" # https://raw.githubusercontent.com/Journalist-HK/Rules/main/cloudfront.txt
 
   - tag: cloudfront_ipv6
     type: ip_set
     args:
       files:
-        - "/etc/mosdns/rule/cloudfront_ipv6.txt" # https://raw.githubusercontent.com/Journalist-HK/Rules/main/cloudfront_ipv6.txt
+        - "/opt/etc/mosdns/rule/cloudfront_ipv6.txt" # https://raw.githubusercontent.com/Journalist-HK/Rules/main/cloudfront_ipv6.txt
 
   - tag: fastly_ip
     type: ip_set
     args:
       files:
-        - "/etc/mosdns/rule/fastly.txt" # https://raw.githubusercontent.com/Loyalsoldier/geoip/release/text/fastly.txt
+        - "/opt/etc/mosdns/rule/fastly.txt" # https://raw.githubusercontent.com/Loyalsoldier/geoip/release/text/fastly.txt
 
   - tag: cdn77_ipv4
     type: ip_set
     args:
       files:
-        - "/etc/mosdns/rule/cdn77_ipv4.txt" # https://raw.githubusercontent.com/Journalist-HK/Rules/main/cdn77_ipv4.txt
+        - "/opt/etc/mosdns/rule/cdn77_ipv4.txt" # https://raw.githubusercontent.com/Journalist-HK/Rules/main/cdn77_ipv4.txt
 
   - tag: sucuri_ipv4
     type: ip_set
     args:
       files:
-        - "/etc/mosdns/rule/sucuri_ipv4.txt" # https://raw.githubusercontent.com/Journalist-HK/Rules/main/sucuri_ipv4.txt
+        - "/opt/etc/mosdns/rule/sucuri_ipv4.txt" # https://raw.githubusercontent.com/Journalist-HK/Rules/main/sucuri_ipv4.txt
 
   - tag: "cache_0"
     type: "cache"
